# br-external

./: 0001-package-mesa3d-allow-gallium-panfrost-without-target.patch  Config.in  README.md  linux-commit  todo.md
.github/workflows/: build.yml  cleanup-artifacts.yml  publish-r2.yml  release.yml
board/hexmeow-chassis-ctrl/: boot.cmd  kernel.confg  post-build.sh
board/hexmeow-chassis-ctrl/dts/rockchip/: rk3568-hexmeow-ctrl-1.dts  rk3568-hexmeow-mini-ctrl-1.dts  rk3576-hexmeow.dts
ci/: Dockerfile
configs/: hexmeow_chassis_ctrl_defconfig
docs/: hex-wifi-acceptance.md  hex-wifi-design.md
hex-hw-supervisor/: Cargo.toml  build.rs
hex-hw-supervisor/src/: main.rs
overlay/etc/: linuxptp.cfg
overlay/etc/hexmeow/: board.yaml
overlay/etc/systemd/system/multi-user.target.wants/: hex-hw-supervisor.service  zenohd-netjoin.service  zenohd-netwatch.service  zenohd.service
overlay/etc/zenoh/: zenohd.json5
overlay/usr/lib/systemd/network/: 20-wlan0.network  end0.network
overlay/usr/lib/systemd/system-preset/: 80-hex-wifi.preset
overlay/usr/libexec/: hex-wifi-acceptance
package/hex-hw-supervisor/: Config.in  hex-hw-supervisor.mk
package/hex-robot-proto/: Config.in  hex-robot-proto.mk
package/hex-wifi/: Config.in  hex-wifi.mk
package/rtl8821cs-wifi/: 0003-fix-makefile-for-6-19.patch.disabled  0004-timer-shim.patch  0005-other-shim.patch  0006-rename-sha256.patch  0007-remove-hardcoded-dsss-parameter-offset.patch  rtl8821cs-wifi.mk
package/zenohd/: Config.in  zenohd.mk
tools/udev/: 70-rockchip-rk3576.rules  README.md
(+9 files in other folders)
