[package]
name = "hex-hw-supervisor"
version = "0.1.0"
edition = "2021"
description = "开源 controller 级硬件 supervisor:按板卡配置驱动板载外设(IMU/急停/遥控器/总线电压…),发布到 <vendor>/<cid>/hw/** 键空间。设计见 robot-overall-design/09-controller-hal.md。"

[dependencies]
zenoh = "1.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[profile.release]
panic = "abort"
